--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run prisma:generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:generate": "prisma generate",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
@@ -24,5 +26,9 @@
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  }
+  ,
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
